# ChatFilter

./: .env.example  .gitignore  .pre-commit-config.yaml  .task-verification.md  .venv  AGENTS.md  ANTIVIRUS.md  BUILD.md  CHANGELOG.md  DECISION.md  KEYBOARD_SHORTCUTS.md  MANUAL_TESTING_REPORT.md  MANUAL_TEST_REPORT_BUG2.md  MULTITAB.md  Makefile  PLANNING.md  PROJECT.md  README.md  README.portable.txt  SECURITY.md  SMOKE_TEST_ChatFilter-t7w.md  SMOKE_TEST_REPORT.md  SPEC_REPORT.md  SPEC_REPORT.prev.md  SSE_DEVTOOLS_VERIFICATION.md  STATUS_TRANSITIONS.md  TASK_ChatFilter-eb4_findings.md  VERIFICATION-ChatFilter-obqh7.md  VERIFICATION.md  VERIFICATION_ChatFilter-186.md  VERIFICATION_ChatFilter-crsff.md  VERIFICATION_ChatFilter-sn463.md  alembic.ini  apply_duplicate_protection.py  apply_proxy_error_handling.py  apply_telegram_error_handling.py  babel.cfg  build.bat  build.sh  chatfilter.spec  (+11 more)
.beads/: .gitignore  backup-issues.json  config.yaml  issues.jsonl
.beads/evidence/: ci-run-24040550721.json
.beads/evidence/ci/: report.md
.beads/evidence/visual/: report.md
.beads/export-state/: 29c2703c5d648c0a.json
.beads/scope-fixes/: ChatFilter-tovtw.md
.claude/: settings.json
.github/workflows/: build-macos.yml  build-windows.yml  ci.yml  cross-platform-tests.yml  deploy.yml  release.yml
.hype/: testing.yaml
.hype/evidence/: smoke-test-report.md
.hype/evidence/api/: 404-test-session-config.txt  account-info-json.txt  api-auth-form.txt  api-chats.txt  api-groups.txt  api-history.txt  api-proxies-list-new.txt  api-proxies-list.txt  api-proxies.txt  api-sessions-auth-form.txt  api-sessions-list.txt  api-version-check-updates.txt  api-version.txt  auth-form.txt  auth-start.txt  chats-page.txt  check-updates.txt  diagnostics.txt  docs-endpoint.txt  docs.txt  export-diagnostics.txt  favicon.txt  findings.md  groups-404.txt  groups-create-invalid.txt  groups-get-nonexistent.txt  groups-get-specific.txt  groups-list.txt  groups-modal-settings.txt  groups-post-400.txt  groups-progress.txt  health-alt.txt  health-check.txt  health-endpoint.txt  health-final.txt  health-fixed.txt  health-new.txt  health-root.txt  health-v2.txt  health.json  (+36 more)
.hype/evidence/backend/: SUMMARY.md  SUMMARY.txt  acceptance-criteria-check.md  analysis.md  api-test-output.txt  api_test.sh  auth-flow-tests.txt  auth-related-tests.txt  auth-tests.txt  auth_flow_tests.txt  backend_logic_test.py  backend_logic_verification.txt  backward-compat-tests.txt  bug-analysis.md  bug-check.sh  bug-test-specific.txt  bug-verification-output.txt  bug_verification.txt  bug_verification_tests.py  connect-flow-states-test.txt  connect-flow-test-failures.txt  connect-flow-tests.txt  coverage-analysis.md  coverage-analysis.txt  coverage-gaps.md  coverage-gaps.txt  coverage-verification.md  debug-execution.txt  debug-execution2.txt  debug_test.py  debug_test2.py  device-confirmation-failures.txt  device-confirmation-full.txt  device-confirmation-tests.txt  device_confirmation_flow_test.txt  device_confirmation_timeout_test.txt  disconnect-test-detail.txt  disconnect-test-failure.txt  disconnect-test-issue.md  edge-cases-tested.txt  (+69 more)
.hype/evidence/functional/: report.md  test_chats.csv
.hype/evidence/visual/: report.md
docs/: CROSS_PLATFORM_TESTING.md  I18N.md  KEY_MANAGEMENT.md  LOGGING.md  MACOS_CODESIGN_SETUP.md  NETWORK_AND_FIREWALL.md  REPRODUCIBLE_BUILDS.md  SESSION_MANAGEMENT.md  STATUS_TRANSITIONS.md  TESTING_STRATEGY.md  VERSIONING.md  WINDOWS_CODESIGN_SETUP.md  edge_cases_design.md  memory-leak-detection.md
scripts/: bump_version.py  package_portable.py  package_portable_windows.bat
src/chatfilter/: __init__.py  config.py  config_filesystem.py  config_proxy.py  diagnostics.py  main.py  self_test.py
src/chatfilter/ai/: __init__.py  billing.py  html_parser.py  models.py  openrouter_client.py  service.py
src/chatfilter/analyzer/: __init__.py  group_engine.py  metrics.py  progress.py  retry.py  scheduler.py  task_execution.py  task_models.py  task_publisher.py  task_queue.py  worker.py
src/chatfilter/exporter/: __init__.py  csv.py
src/chatfilter/i18n/: __init__.py  js_translations.py  middleware.py  translations.py
src/chatfilter/importer/: __init__.py  google_sheets.py  parser.py
src/chatfilter/migrations/: env.py  script.py.mako
src/chatfilter/models/: __init__.py  account.py  analysis.py  base.py  catalog.py  chat.py  group.py  message.py  monitoring.py  proxy.py  settings.py
src/chatfilter/parsers/: __init__.py  telegram_expert.py
src/chatfilter/scheduler/: updater.py
src/chatfilter/scraper/: __init__.py  base.py  browser.py  orchestrator.py  query_generator.py  registry.py
tests/: __init__.py  conftest.py  conftest_worktree.py  db_helpers.py  generated_test_ai_backend.py  generated_test_backend_edge_cases.py  generated_test_billing_settle_on_failed_reserve.py  generated_test_collect_endpoint.py  generated_test_spec_billing.py  generated_test_spec_final.py  generated_test_spec_gaps.py  generated_test_spec_scraper_gaps.py  generated_test_spec_ux_backend.py  smoke_test.py  test_8_state_model.py  test_account_info.py  test_account_watchdog.py  test_admin_settings_security.py  test_admin_tab_routing.py  test_admin_user_split.py  test_adopt_client.py  test_ai_backend.py  test_ai_cost_estimation.py  test_ai_html_parser_security.py  test_analysis_engine_two_stage.py  test_analysis_router.py  test_analyzer.py  test_audit_fixes.py  test_auth.py  test_auth_ownership.py  test_auth_state.py  test_backend_edge_cases.py  test_batch_metrics.py  test_billing.py  test_boot_recovery.py  test_chat_status_model.py  test_chat_validation.py  test_chatlist_router.py  test_chats_page_i18n.py  test_chats_router.py  (+139 more)
tests/integration/: test_auth_flow_fixes.py  test_device_confirmation_timeout.py  test_group_analysis.py  test_helpers.py
tests/sessions/: __init__.py  conftest.py  test_2fa.py  test_config.py  test_connect.py  test_diagnostics.py  test_helpers.py  test_legacy.py  test_recovery.py  test_routes.py  test_upload.py
tests/web/: test_sessions.py
tools/: bump_version.py  check_version_sync.py
(+255 files in other folders)
