[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatfilter"
version = "0.1.0"
description = "Telegram chat filtering and analysis tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "m" }
]
dependencies = [
    "telethon>=1.34.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pysocks>=1.7.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
chatfilter = "chatfilter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chatfilter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["chatfilter"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
