[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatfilter"
version = "0.10.1"
description = "Telegram chat filtering and analysis tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "m" }
]
dependencies = [
    "telethon>=1.42.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.1.0",
    "pysocks>=1.7.0",
    "openpyxl>=3.1.0",
    "httpx>=0.28.0",
    "platformdirs>=4.0.0",
    "cryptography>=46.0.0",
    "keyring>=25.0.0",
    "babel>=2.14.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-cryptography",
    "types-babel>=2.11.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
    "memray>=1.11.0; sys_platform == 'linux'",  # Advanced memory profiling (Linux-only)
    "psutil>=5.9.0",  # Memory monitoring for tests
]

[project.scripts]
chatfilter = "chatfilter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chatfilter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
timeout = 30
markers = [
    "skip_leak_detection: Skip memory leak detection for this test",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["chatfilter"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["keyring", "keyring.*", "cryptography", "cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["telethon", "telethon.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hypothesis", "hypothesis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["platformdirs", "platformdirs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["socks", "socks.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["psutil", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["babel", "babel.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/chatfilter"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    # Auth state management (tested via integration tests)
    "*/web/auth_state.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 75.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = [
    "B101",  # assert_used - acceptable for internal invariants
    "B311",  # random - used for non-security purposes (IDs, sampling)
    "B404",  # subprocess import - required for port checking
    "B603",  # subprocess call - controlled internal commands only
    "B607",  # partial path - lsof/netstat are system utilities
]
